k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pmfrontend
                port:
                  number: 80

    - host: pm.backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

    - host: pm.grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

    - host: pm.prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: pm.eureka
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka
                port:
                  number: 8761
